--- a/docs/tutorial/I.-UMI-deduplication/2.-Multiple-loci.md
+++ b/docs/tutorial/I.-UMI-deduplication/2.-Multiple-loci.md
@@ -1,6 +1,8 @@
-`tresor.gene.library` is the module that can simulate sequencing libraries at the bulk RNA-seq level. This is used to simulate reads that are tagged by genes, respectively.
+`mclumi.multipos` is a module used for deduplicating UMIs observed at multiple genomic positions/loci or multiple genes.
 
 # Usage
+
+The `mclumi.multipos` module can be used in Python and Shell.
 
 ## 1. Python
 
@@ -168,7 +170,7 @@
 ## 2. Shell
 
 ### 2.1 Command
-
+The shell command is simplified, but more parameters should be specified in a YAML file, `params.yml` in order to reduce complexity but optimise future extension.
 ``` c++ linenums="1"
 mclumi loci \
 -m mcl \
@@ -179,7 +181,7 @@ mclumi loci \
 -vb True
 ```
 
-### 2.2 Command attributes
+### 2.2 Attributes in the command
 
 !!! Illustration
 
@@ -204,10 +206,6 @@ tag:
   # loci
   pos_tag: PO
 
-  # bulk or single-cell
-  gene_assigned_tag: XT
-  gene_is_assigned_tag: XS
-
 umi:
   ed_thres: 1
 
@@ -224,11 +222,6 @@ dedup:
   exp_val: 2
   iter_num: 100
 
-#  dbscan_eps: 1.5
-#  dbscan_min_spl: 1
-#  birch_thres: 1.8
-#  birch_n_clusters: None
-#  hdbscan_min_spl: 3
 ```
 
 ### 2.4 Attributes in the YAML file
@@ -237,9 +230,8 @@ dedup:
 
     | Attribute      | Description                          |
     | :---------- | :----------------------------------- |
+    | `work_dir` | working directory |    
     | `ed_thres` | edit distance |
-    | `gene_assigned_tag` | to enable deduplication on the gene tag (XT recommended). Any other tag if you know what tags the reads in your provided BAM file. |
-    | `gene_is_assigned_tag` | to check if reads are assigned the gene tag (XS recommended) |
     | `pos_tag` | the tag to denote from which genomic position/locus a read is observed. For example, `mclumi.prep.umi_tools` function outputs reads whose positions are tagged with `PO` |
     | `inflat_val` | inflation parameter of the Markov Clustering algorithm |
     | `exp_val` | expansion parameter of the Markov Clustering algorithm |
@@ -247,8 +239,10 @@ dedup:
     | `mcl_fold_thres` | a fold change threshold for MCL at a range of (1, `l`) where `l` is the length of a UMI. This parameter is placed when the `mcl_ed` or `mcl_val` function is used. |
 
 # Output
-## Console
-``` py
+
+## 1. Console
+
+``` shell
                    ____  ____  _______
    ____ ___  _____/ / / / /  |/  /  _/
   / __ `__ \/ ___/ / / / / /|_/ // /  
@@ -314,54 +308,52 @@ Name: mcl, Length: 12047, dtype: object
 [12047 rows x 12 columns]
 ```
 
-## Understanding files
-The resultant files of the simulated sequencing library are shown in the following picture.
+## 2. Understanding results
+After running, the generated files are shown in the following screenshot.
 
 <figure markdown="span">
-  ![Image title](../../img/slib/gene/lib_random_content.jpg){ width="800" }
-  <figcaption><strong>Fig</strong> 1. Generated files of a sequencing library</figcaption>
+  ![Image title](../../img/multipos/mcl_files.jpg){ width="800" }
+  <figcaption><strong>Fig</strong> 1. Generated files with MCL</figcaption>
 </figure>
+
+In the output directory, there are three files:
 
 !!! info "Annotation"
 
-    For speeding up computation, we simulated the library for sample 0, which has genes 3, 4, and 5.
+    * **`{method}_ave_ed_pos_bin.txt`** - in which UMI count summary results will be stored, indicating observed UMIs under multiple genomic positions/loci.
+    * **`{method}_dedup_sum.txt`** - deduplicated UMI counts across all reads in the newly generated bam file.
+    * **`{method}_dedup.bam`** - in which the deduplicated reads will be stored.
 
-    * ***seq_s_0_g_3.txt*** - sequences for sample 0 and gene 3
-    * ***umi_s_0_g_3.txt*** - UMIs for sample 0 and gene 3
-    * ***cdna_ids_alone_s_0_g_3.txt*** - cDNA IDs for sample 0 and gene 3
+Statistics provided in file `mcl_ave_ed_pos_bin.txt` are tabulated as follow:
 
-In this case, we used homotrimer blocks to simulate UMIs where the length of each UMI is set to be 36 containing 12 trimer blocks.
+| ave_eds  | count |
+|:---------|:------|
+| -1.0     | 10470 |
+| 2.0      | 162   |
+| 3.0      | 206   |
+| ...      | ...   |
+ 
+!!! info "Annotation"
 
-<figure markdown="span">
-  ![Image title](../../img/slib/gene/umi.jpg){ width="800" }
-  <figcaption><strong>Fig</strong> 2. Simulated UMIs</figcaption>
-</figure>
+    * **`the 1st column`** - average edit distance between UMIs at genomic positions.
+    * **`the 2nd column`** - number of reads tagged with UMIs observed in that edit distance.
+    * **`*`** `-1.0` in column `edit distance` represents that only one unique umi seen at a single genomic position; in total there are 10470 genomic positions seen with one unique umi.
 
-The sequences are randomly chosen from the input human cDNAs and truncated according to the length of each short read. 
-<figure markdown="span">
-  ![Image title](../../img/slib/gene/seq.jpg){ width="800" }
-  <figcaption><strong>Fig</strong> 3. Simulated genomics sequences</figcaption>
-</figure>
+Statistics provided in file `mcl_dedup_sum.txt` are tabulated as follow:
 
-The sequencing library is tabulated to a dataframe. Each row shows the necessary information about the read 1
+| index | {method}_umi_len | ave_eds | uniq_umi_len | dedup_uniq_diff_pos | dedup_read_diff_pos |
+|:------|:-----------------| :--- |:-------------|:--------------------|:--------------------|
+| 0     | 4                | 4.0 | 4            | 0                   | 0                   |
+| 1     | 2                | 5.0 | 2            | 0                   | 0                   |
+| 2     | 7                | 4.0 | 9            | 2                   | 2                   |
+| ...   | ...              | ... | ...          | ...                 | ...                 |
 
-1. Sequence
-2. Identifier
-3. Source
 
-!!! note "Attention"
+!!! info "Annotation"
 
-    The identifier is composed of ID of the molecule, character `s` for sample, ID of the sample, character `g` for gene, and ID of the gene, demarked by *.
-
-Init means a read 1 is a sequence from the sequencing library, to differ from those from PCR amplification.
-
-<figure markdown="span">
-  ![Image title](../../img/slib/gene/seq_lib.jpg){ width="800" }
-  <figcaption><strong>Fig</strong> 4. Simulated sequencing library</figcaption>
-</figure>
-
-For sample 0, the chosen gene symbols of gene 3 are recorded, which correspond to the taken truncated sequences by order.
-<figure markdown="span">
-  ![Image title](../../img/slib/gene/cdna_ids.jpg){ width="800" }
-  <figcaption><strong>Fig</strong> 5. Seeds for simulating cDNAs </figcaption>
-</figure>
+    * **`the 1st column`** - genomic positions of interest.
+    * **`the 2nd column`** - deduplicated UMI counts (corresponding to the number of DNA molecules/transcripts) at genomic positions.
+    * **`the 3rd column`** - average edit distances between UMIs at given genomic positions.
+    * **`the 4th column`** - unique UMI counts at given genomic positions.
+    * **`the 5th column`** - difference in dedup UMI counts and original unique UMI counts.
+    * **`the 6th column`** - difference in the number of dedup reads and original reads.
